# copycat

./: .env.example  .gitignore  .gitlab-ci.yml  CLAUDE.md  CONTINUATION-PLAN.md  DEPLOYMENT_LESSONS.md  DEPLOYMENT_RESILIENCE.md  DEPLOY_NOW.sh  FIXES_STUCK_VIDEOS.md  GITHUB_SECRETS.md  IMPLEMENTATION_COMPLETE.md  PLAN-risk-redesign.md  PRODUCTION_NEXT_STEPS.md  QUICK_START.md  RBAC_IMPLEMENTATION.md  README.md  SETUP_CHECKLIST.md  STUCK_VIDEOS_FIX.md  TERRAFORM_DEPLOYMENT_READY.md  copycat_inventory.json  deploy.sh  docker-compose.yml  firestore.indexes.json  firestore.rules  pyproject.toml
.planning/: ARCHITECTURE.md  (+9 more)
services/api-service/: .env.example  Dockerfile  README.md  pyproject.toml
services/api-service/app/: main.py  models.py
services/api-service/app/core/: auth.py  config.py  discovery_client.py  firestore_client.py  frozen_time.py
services/api-service/app/models/: __init__.py  config.py
services/api-service/app/routers/: admin.py  analytics.py  channels.py  config.py  config_ai_assistant.py  config_manager.py  config_validate_characters.py  discovery.py  keyword_stats.py  status.py  users.py  videos.py  vision_budget.py
services/api-service/app/utils/: logging_utils.py
services/api-service/terraform/: cloud_run.tf  data.tf  iam.tf  main.tf  outputs.tf  provider.tf  terraform.tfvars.example  variables.tf
services/api-service/tests/: test_main.py
services/chapter-extractor-service/: pyproject.toml
services/discovery-service/: .env.example  .gitignore  Dockerfile  Dockerfile.dev  README.docker.md  README.md  cloudbuild.yaml  pyproject.toml
services/discovery-service/app/: __init__.py  config.py  ip_targets.yaml  main.py  models.py
services/discovery-service/app/core/: __init__.py  channel_discovery.py  channel_tracker.py  discovery_engine.py  fresh_content_scanner.py  ip_loader.py  keyword_tracker.py  quota_manager.py  search_history.py  search_randomizer.py  video_processor.py  video_rescanner.py  youtube_client.py
services/discovery-service/app/middleware/: __init__.py  logging.py
services/discovery-service/app/routers/: __init__.py  discover.py  health.py
services/discovery-service/data/: ip_targets.yaml
services/discovery-service/terraform/: cloud_run.tf  data.tf  iam.tf  main.tf  outputs.tf  provider.tf  scheduler.tf  terraform.tfvars.example  variables.tf
services/discovery-service/tests/: __init__.py  test_channel_discovery.py  test_channel_tracker.py  test_discovery_engine.py  test_models_new.py  test_quota_manager.py  test_video_processor.py  test_view_velocity_tracker.py
services/frame-extractor-service/: pyproject.toml
services/frontend-service/: .env.example  Dockerfile  Dockerfile.dev  README.md  pyproject.toml
services/frontend-service/app/: main.py
services/frontend-service/app/static/: index.html
services/frontend-service/app/static/assets/: index-BRdpcoTS.css  index-DqQEVthE.js
services/frontend-service/app/web/: index.html  package-lock.json  package.json  vite.config.ts
services/frontend-service/app/web/src/: App.tsx  main.tsx
services/frontend-service/app/web/src/api/: analytics.ts  channels.ts  client.ts  discovery.ts  keywords.ts  status.ts  users.ts  videos.ts  vision.ts
services/frontend-service/app/web/src/components/: ActiveScansOverlay.tsx  ActiveScansPanel.tsx  ActivityTimeline.tsx  AlertCenter.tsx  AnalysisDetailModal.tsx  ChannelCard.tsx  ColdStartBanner.tsx  CompactScanWidget.tsx  EditableTagsSection.tsx  GlobalErrorHandler.tsx  MetricsGrid.tsx  PerformanceGauges.tsx  ProtectedRoute.tsx  RecentActivityFeed.tsx  ScanProgressModal.tsx  ScanProgressNotification.tsx  SystemHealthBanner.tsx
services/frontend-service/app/web/src/contexts/: AuthContext.tsx
services/frontend-service/app/web/src/hooks/: useChannels.ts  usePermissions.ts
services/frontend-service/app/web/src/pages/: ChannelEnforcementPage.tsx  ChannelListPage.tsx  ConfigGeneratorPage.tsx  Dashboard.tsx  DashboardsPage.tsx  DiscoveryPage.tsx  RiskAnalyzerPage.tsx  UserRolesPage.tsx  VideoListPage.tsx  VisionAnalyzerPage.tsx
services/frontend-service/app/web/src/types/: index.ts  react-gauge-chart.d.ts
services/frontend-service/terraform/: cloud_run.tf  data.tf  iam.tf  locals.tf  main.tf  outputs.tf  provider.tf  terraform.tfvars.example  variables.tf
services/risk-analyzer-service/: Dockerfile  Dockerfile.dev  README.md  pyproject.toml
services/risk-analyzer-service/app/: __init__.py  config.py  dependencies.py  main.py  models.py  worker.py
services/risk-analyzer-service/app/core/: channel_risk_calculator.py  channel_risk_calculator.py.backup  channel_tracker.py  channel_updater.py  infringement_risk_calculator.py  risk_analyzer.py  risk_rescorer.py  scan_priority_calculator.py  scan_scheduler.py  video_risk_calculator.py  view_velocity_tracker.py
services/risk-analyzer-service/app/routers/: admin.py  health.py  webhooks.py
services/risk-analyzer-service/terraform/: cloud_run.tf  data.tf  iam.tf  locals.tf  main.tf  outputs.tf  pubsub.tf  terraform.tfvars.example  variables.tf
services/risk-analyzer-service/tests/: test_health.py  test_risk_rescorer.py  test_view_velocity_tracker.py
services/risk-scorer-service/: pyproject.toml
services/vision-analyzer-service/: Dockerfile  Dockerfile.dev  README.md  pyproject.toml
services/vision-analyzer-service/app/: __init__.py  config.py  main.py  models.py  worker.py
services/vision-analyzer-service/app/core/: __init__.py  budget_manager.py  config_loader.py  gemini_client.py  prompt_builder.py  result_processor.py  video_analyzer.py  video_config_calculator.py
services/vision-analyzer-service/app/routers/: admin.py  analyze.py  health.py
services/vision-analyzer-service/terraform/: cloud_run.tf  data.tf  iam.tf  main.tf  outputs.tf  provider.tf  pubsub.tf  scheduler.tf  terraform.tfvars.example  variables.tf
services/vision-analyzer-service/tests/: __init__.py  conftest.py  test_aggregate_updates.py  test_budget_manager.py  test_graceful_shutdown.py  test_prompt_builder.py  test_result_processor.py  test_startup_cleanup.py  test_video_config_calculator.py
(+125 files in other folders)
