[project]
name = "copycat"
version = "0.1.0"
description = "Microservices project workspace"
requires-python = ">=3.13"
dependencies = []

[tool.uv.workspace]
members = [
    "services/*"
]

[dependency-groups]
dev = [
    "pytest>=8.3.4",
    "ruff>=0.14.4",
    "mypy>=1.13.0",
    "types-python-dateutil>=2.9.0.20251108",
]
