[project]
name = "frame-extractor-service"
version = "0.1.0"
description = "Extract frames from videos using OpenCV"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.119.1",
    "uvicorn[standard]>=0.32.0",
    "pydantic-settings>=2.10.0",
    "opencv-python>=4.12.0.88",
    "yt-dlp>=2025.10.22",
    "numpy>=2.2.0",
    "pillow>=11.0.0",
    "google-cloud-storage>=3.4.1",
    "google-cloud-firestore>=2.21.0",
    "google-cloud-pubsub>=2.31.1",
    "python-json-logger>=3.2.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
