[project]
name = "frontend-service"
version = "0.1.0"
description = "Copycat Frontend - React SPA with FastAPI proxy for IAM authentication"
requires-python = ">=3.13"
dependencies = [
    "fastapi==0.119.1",
    "uvicorn[standard]==0.34.0",
    "pydantic==2.10.6",
    "pydantic-settings==2.11.0",
    "google-auth==2.42.0",
    "requests==2.32.5",
    "httpx==0.28.1",
    "sse-starlette>=3.0.2",
]

[project.optional-dependencies]
dev = [
    "pytest==8.3.4",
    "pytest-asyncio==1.2.0",
    "ruff==0.8.5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
line-length = 120
target-version = "py313"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["."]
