[project]
name = "risk-scorer-service"
version = "0.1.0"
description = "Risk scoring service to filter high-risk videos"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.119.1",
    "uvicorn[standard]>=0.32.0",
    "pydantic-settings>=2.10.0",
    "google-cloud-firestore>=2.21.0",
    "google-cloud-pubsub>=2.31.1",
    "python-json-logger>=3.2.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
